# app/Http/Controllers/UserController.php
@@ -57,81 +57,7 @@ class UserController extends Controller
             ], $e->status);
         }
     }
-    /**
-     * @OA\Post(
-     *      path="/user", 
-     *      tags={"/user"},
-     *      summary="user",
-     *      description="Rota responsavel por criar usuário!",
-     *      security= {{"bearerAuth": {}}},
-     *     @OA\RequestBody(
-     *         @OA\MediaType(
-     *             mediaType="application/json",
-     *             @OA\Schema( 
-     *                 required={"name","email","password","level_id"},
-     *                 @OA\Property(
-     *                     property="name",
-     *                     type="string"
-     *                 ),
-     *                 @OA\Property(
-     *                     property="email",
-     *                     type="string"
-     *                 ),
-     *                 @OA\Property(
-     *                     property="password",
-     *                     type="string"
-     *                 ),
-     *                 @OA\Property(
-     *                     property="level_id",
-     *                     type="number"
-     *                 ),
-     *                 example={"name": "Fulano de Tal",
-     *                          "email": "fulano@gmail.com", 
-     *                          "password": "123456",
-     *                          "level_id": 1}
-     *             )
-     *         )
-     *     ),
-     *      @OA\Response (response="200", description="Success"),
-     *      @OA\Response (response="201", description="Created"),
-     *      @OA\Response (response="401", description="Unauthorized"),
-     *      @OA\Response (response="403", description="Forbidden"),
-     *      @OA\Response (response="404", description="Not Found"),
-     *      @OA\Response (response="409", description="Conflict"),
-     *      @OA\Response (response="500", description="Internal Server Error"),
-     * )
-     */
-    public function createUser(Post_UserRequest $request)
-    {
-        try {
-            $mailTest = User::firstWhere('email', $request['email']);
-            if ($mailTest) {
-                return response()->json([
-                    "error:" => "true",
-                    "message" => "Email já existe em nossa base de dados!",
-                ], 409);
-            }
 
-            $user = new User;
-            $user->name = $request->name;
-            $user->email = $request->email;
-            $user->password = bcrypt($request->password);
-            $user->level_id = $request->level_id;
-            $user->save();
-
-
-            return response()->json(
-                'Usuário criado com sucesso!',
-                200
-            );
-        } catch (\Throwable  $e) {
-
-            return response()->json([
-                "error:" => "true",
-                "message" => $e->getMessage(),
-            ], $e->status);
-        }
-    }
     /**
      * @OA\Get(
      *      path="/user/{id}", 
