# app/Http/Requests/Post_UserRequest.php
@@ -29,7 +29,10 @@ class Post_UserRequest extends FormRequest
             'name' => 'required|min:6|max:100 | string',
             'email' => 'required|min:6|max:80|email:rfc,dns',
             'password' => 'required|min:4|max:40 | string',
-            'level_id' => 'required|min:1 | integer',
+            'address' => 'required|min:4|max:80 | string',
+            'number' => 'required|min:4|max:40 | integer',
+            'phone' => 'required|min:4|max:20 | string',
+            'complement' => 'min:4|max:30 | string',
         ];
     }
     protected function failedValidation(Validator $validator)
@@ -55,9 +58,20 @@ class Post_UserRequest extends FormRequest
             'name.max' => 'O name não deve ter mais de 10 caracteres.',
             'name.min' => 'O name deve ter pelo menos 6 caracteres.',
             'name.string' => 'O name deve ser uma string.',
-            'level_id.required' => 'O level_id é obrigatório!',
-            'level_id.min' => 'O level_id deve conter o no minimo um id válido.',
-            'level_id.integer' => 'O level_id deve ser um integer.',
+            'number.required' => 'O number é obrigatório!',
+            'number.min' => 'O number deve conter o no minimo um id válido.',
+            'number.integer' => 'O number deve ser um integer.',
+            'address.max' => 'O address não deve ter mais de 80 caracteres.',
+            'address.min' => 'O address deve ter pelo menos 4 caracteres.',
+            'address.string' => 'O address deve ser uma string.',
+            'address.required' => 'O address é obrigatório!',
+            'phone.max' => 'O phone não deve ter mais de 20 caracteres.',
+            'phone.min' => 'O phone deve ter pelo menos 4 caracteres.',
+            'phone.string' => 'O phone deve ser uma string.',
+            'phone.required' => 'O phone é obrigatório!',
+            'complement.max' => 'O complement não deve ter mais de 30 caracteres.',
+            'complement.min' => 'O complement deve ter pelo menos 4 caracteres.',
+            'complement.string' => 'O complement deve ser uma string.',
         ];
     }
 }
