# routes/api.php
@@ -9,16 +9,18 @@ use \App\Http\Controllers\LevelController;
 
 //auth
 Route::post('/v1/authentication', [AuthController::class, 'post_Auth'])->name('authentication.auth');
+Route::post('/v1/account', [AccountController::class, 'createUser'])->name('user.create');
 
 Route::middleware(AuthenticMD::class)->prefix('/v1')->group(function () {
 
-
+   
     Route::get('/account/me', [AccountController::class, 'getInfoAccount'])->name('account.me');
     Route::patch('/account/me', [AccountController::class, 'updateAccount'])->name('account.me');
-    Route::post('/account/me/image', [AccountController::class, 'updateAccountImage'])->name('account.me');
+    //Route::post('/account/me/image', [AccountController::class, 'updateAccountImage'])->name('account.me');
     Route::get('/account/refresh', [AccountController::class, 'refreshToken'])->name('account.refresh');
+    Route::patch('/user/{id}', [UserController::class, 'updateUser'])->name('user.find');
     
-    Route::post('/user', [UserController::class, 'createUser'])->name('user.create');
+
     Route::get('/user', [UserController::class, 'allUsers'])->name('user.all');
     Route::get('/user/{id}', [UserController::class, 'getUser'])->name('user.find');
     Route::patch('/user/{id}', [UserController::class, 'updateUser'])->name('user.find');
